<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/top_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/login" />

        <LinearLayout
            android:layout_weight="3"
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/top_logo"
            android:background="@color/gray_background_medium_alpha"
            android:orientation="vertical"
            android:padding="15dp">

            <sempait.rouss.Utils.HelveticaNeueMediumEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_gray_text"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <sempait.rouss.Utils.HelveticaNeueMediumEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_gray_text"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <RelativeLayout
                android:id="@+id/btn_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/hint_gray_text"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/form"
            android:layout_margin="20dp"
            android:background="@drawable/white_rounded_background">

            <sempait.rouss.Utils.HelveticaNeueLightTextView
                android:id="@+id/btn_done_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subtitle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/form"
            android:layout_margin="20dp"
            android:background="@drawable/white_rounded_background">

            <sempait.rouss.Utils.HelveticaNeueLightTextView
                android:id="@+id/btn_craar_cuenta_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Crear cuenta"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subtitle" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>