<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:scaleType="centerInside"

        android:src="@drawable/login" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/gray_background_medium_alpha"
        android:orientation="vertical"
        android:layout_gravity="center">


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/nombre"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/apellido"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />

        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/telefono"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_dni"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/dni"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <RelativeLayout
            android:id="@+id/btn_crear_cuenta"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/white_rounded_background">

            <sempait.rouss.Utils.HelveticaNeueLightTextView
                android:id="@+id/btn_done_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Crear"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subtitle" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btn_relative_cancelar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/white_rounded_background">

            <sempait.rouss.Utils.HelveticaNeueLightTextView
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Cancelar"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subtitle" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
