<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="10dp">


    <ImageView
        android:id="@+id/img_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:background="@drawable/ingresofondo" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <sempait.rouss.Utils.HelveticaNeueMediumEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_gray_text"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black" />


            <RelativeLayout
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/form"
                android:layout_margin="20dp"
                android:background="@drawable/white_rounded_background">

                <sempait.rouss.Utils.HelveticaNeueLightTextView
                    android:id="@+id/btn_done_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/enviar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_subtitle" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>