<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:background="@drawable/ingresofondo" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="120dp"
        android:paddingBottom="10dp">

        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@color/black" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:layout_marginRight="20dp"
            android:background="@color/black" />

        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:hint="@string/telefono"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:layout_marginRight="20dp"
            android:background="@color/black" />


        <sempait.rouss.Utils.HelveticaNeueMediumEditText
            android:id="@+id/et_dni"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/dni"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_gray_text"
            android:textCursorDrawable="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:layout_marginRight="20dp"
            android:background="@color/black" />

        <CheckBox
            android:id="@+id/cb_mayor18"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Soy mayor de 18 años" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">


            <RelativeLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/white_rounded_background">

                <sempait.rouss.Utils.HelveticaNeueLightTextView
                    android:id="@+id/btn_crear_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Crear cuenta"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_subtitle" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
